--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,22 +1,31 @@
-<link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<div class="container">
+<head>
+    <title>Thymeleaf Model</title>
+	<link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+	<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+	<script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+	
+
+</head>
+
+<body> 
+<div class="container" th:if="${Tabla1}"> 
     <div class="page-header">
-        <h1>Panels with nav tabs.<span class="pull-right label label-default">:)</span></h1>
-    </div>
-    <div class="row">
+        <h1>Student tab.<span class="pull-right label label-default">:)</span></h1>
+		<p>First tabla.</p>
+		</div>
+		<div class="row">
     	<div class="col-md-6">
             <div class="panel with-nav-tabs panel-default">
                 <div class="panel-heading">
                         <ul class="nav nav-tabs">
-                            <li class="active"><a href="#tab1default" data-toggle="tab">Default 1</a></li>
-                            <li><a href="#tab2default" data-toggle="tab">Default 2</a></li>
-                            <li><a href="#tab3default" data-toggle="tab">Default 3</a></li>
+                            <li class="active"><a href="#tab1default" data-toggle="tab">Name</a></li>
+                            <li><a href="#tab2default" data-toggle="tab">Last name</a></li>
+                            <li><a href="#tab3default" data-toggle="tab">Semester</a></li>
                             <li class="dropdown">
-                                <a href="#" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+                                <a href="#" data-toggle="dropdown">Engineering <span class="caret"></span></a>
                                 <ul class="dropdown-menu" role="menu">
                                     <li><a href="#tab4default" data-toggle="tab">Default 4</a></li>
                                     <li><a href="#tab5default" data-toggle="tab">Default 5</a></li>
@@ -26,27 +35,32 @@
                 </div>
                 <div class="panel-body">
                     <div class="tab-content">
-                        <div class="tab-pane fade in active" id="tab1default">Default 1</div>
-                        <div class="tab-pane fade" id="tab2default">Default 2</div>
-                        <div class="tab-pane fade" id="tab3default">Default 3</div>
+                        <div class="tab-pane fade in active" id="tab1default">Isabela</div>
+                        <div class="tab-pane fade" id="tab2default">Solis</div>
+                        <div class="tab-pane fade" id="tab3default">Sexto</div>
                         <div class="tab-pane fade" id="tab4default">Default 4</div>
                         <div class="tab-pane fade" id="tab5default">Default 5</div>
                     </div>
                 </div>
             </div>
         </div>
-       
-<div class="container">
+	</div> 
+	</div>
+<div class="container" th:unless="${Tabla1}"> 
+	<div class="page-header">
+	        <h1>Student tab.<span class="pull-right label label-default">:)</span></h1>
+			<p>Second tab.</p>
+			</div>
     <div class="row">
 		<div class="col-md-6">
             <div class="panel with-nav-tabs panel-success">
                 <div class="panel-heading">
                         <ul class="nav nav-tabs">
-                            <li class="active"><a href="#tab1success" data-toggle="tab">Success 1</a></li>
-                            <li><a href="#tab2success" data-toggle="tab">Success 2</a></li>
-                            <li><a href="#tab3success" data-toggle="tab">Success 3</a></li>
+                            <li class="active"><a href="#tab1success" data-toggle="tab">Name</a></li>
+                            <li><a href="#tab2success" data-toggle="tab">Last name</a></li>
+                            <li><a href="#tab3success" data-toggle="tab">Semester</a></li>
                             <li class="dropdown">
-                                <a href="#" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+                                <a href="#" data-toggle="dropdown">Degree <span class="caret"></span></a>
                                 <ul class="dropdown-menu" role="menu">
                                     <li><a href="#tab4success" data-toggle="tab">Success 4</a></li>
                                     <li><a href="#tab5success" data-toggle="tab">Success 5</a></li>
@@ -56,13 +70,14 @@
                 </div>
                 <div class="panel-body">
                     <div class="tab-content">
-                        <div class="tab-pane fade in active" id="tab1success">Success 1</div>
-                        <div class="tab-pane fade" id="tab2success">Success 2</div>
-                        <div class="tab-pane fade" id="tab3success">Success 3</div>
+                        <div class="tab-pane fade in active" id="tab1success">Astrid</div>
+                        <div class="tab-pane fade" id="tab2success">Solis</div>
+                        <div class="tab-pane fade" id="tab3success">Finish</div>
                         <div class="tab-pane fade" id="tab4success">Success 4</div>
                         <div class="tab-pane fade" id="tab5success">Success 5</div>
                     </div>
                 </div>
             </div>
         </div>
-<br/>
+</body>
+</html>
